--- a/Tranport_Project/Frontend/fe-stenlogistics/src/app/home/home.component.html
+++ b/Tranport_Project/Frontend/fe-stenlogistics/src/app/home/home.component.html
@@ -45,13 +45,11 @@
         <div class="w3-twothird mt-4">
           <h1>Our Goal</h1>
           <p class="text-style">
-            The Goal of the Company is to provide the secure and efficient
-            service to its customers. We carry your stuff/goods safely from its
-            origin to the destination within the given time mentioned in the
-            policy rules. We do not Carry any illegal things which may be the
-            cause of defamation of the company or the client. we believe for a
-            tranparent journey, it is very necessary to keep the transparency in
-            every stuff.
+            The Goal of the Company is to provide secure and efficient service
+            to the customers. We transport your goods safely from origin to
+            destination in the blink of an eye. We reserve the right to refuse
+            the transport of goods thought to be illegal, or any goods which may
+            be belived to cause implications to the company or the client.
           </p>
         </div>
 
